skill container alignment fix

--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -168,7 +168,6 @@
 .skills-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 7px;
   margin-top: 15px;
   margin-bottom: 5px;
@@ -235,7 +234,7 @@
     padding-bottom: 90px;
   }
   .experience-card {
-    height: 365px;
+    height: 375px;
     padding: 1.2rem;
   }
   .highlights li {
